# bids2table

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  README.md  bids2table.html  codecov.yaml  index.html  pyproject.toml  requirements.txt  search.js  setup.cfg
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  development_task.yaml  support_request.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/scripts/: compare_benchmarks.py  run_benchmarks.py
.github/workflows/: benchmark.yaml  ci.yaml  coverage.yaml  docs.yaml  release.yaml  report.yaml  test.yaml
benchmark/: benchmark_indexing.py
benchmark/indexing/: README.md  analysis.ipynb  benchmark_indexing.py  nki_ancpbids_batch_array.sh  nki_bids2table_batch_array.sh  nki_pybids_batch_array.sh  setup_environments.sh
benchmark/query/: README.md  query_benchmark.ipynb  requirements.txt  setup_environment.sh
bids2table/: __init__.py  __main__.py  _b2t.py  _b2t.pyi  _bids2table.py  _entities.py  _indexing.py  _logging.py  _metadata.py  _pathlib.py  _schema.py  cli.py  entities.py  exceptions.py  helpers.py  loaders.py  logging.py  table.py
bids2table/extractors/: __init__.py  _inheritance.py  _utils.py  bids.py  dataset.py  entities.py  image.py  inheritance.py  metadata.py  sidecar.py
bids2table/pybids/: __init__.py  _bidsfile.py  _layout.py  _utils.py
example/: example.ipynb  exploration.ipynb  main.py
examples/: main.py
scripts/: benchmark.py
tests/: conftest.py  test_bids2table.py  test_entities.py  test_helpers.py  test_indexing.py  test_logging.py  test_main.py  test_metadata.py  test_schema.py  test_table.py
tests/benchmarks/: conftest.py  test_index.py  test_query.py
tests/pybids/: test_bidsfile.py  test_custom_entities.py  test_layout.py  test_query.py
tests/test_extractors/: conftest.py  test_bids.py  test_dataset.py  test_entities.py  test_image.py  test_metadata.py  test_sidecar.py
tests/unit/: test__bids2table.py
