[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bids2table"
dynamic = ["version"]
authors = [{ name = "Connor Lane", email = "connor.lane858@gmail.com" }]
description = "Index BIDS datasets fast, locally or in the cloud."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

dependencies = ["bidsschematools>=1.0", "pyarrow>=20.0.0", "tqdm>=4.67.1"]

[project.optional-dependencies]
s3 = ["cloudpathlib[s3]>=0.21.0"]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "pandas==2.2.3",
    "pdoc>=15.0.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.9",
]

[project.urls]
"Homepage" = "https://github.com/childmindresearch/bids2table"
"Issues" = "https://github.com/childmindresearch/bids2table/issues"

[project.scripts]
bids2table = "bids2table.__main__:main"
b2t2 = "bids2table.__main__:main"

[tool.setuptools.packages.find]
include = ["bids2table*"]

[tool.setuptools_scm]
version_file = "bids2table/_version.py"

[tool.ruff]
line-length = 88
target-version = "py312"
lint.extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
