[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bids2table"
dynamic = ["version"]
authors = [{ name = "Connor Lane", email = "connor.lane858@gmail.com" }]
description = "Index BIDS datasets fast, locally or in the cloud."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

dependencies = ["bidsschematools>=1.0", "pyarrow>=24.0.0", "tqdm>=4.67.3"]

[project.optional-dependencies]
cloud = ["cloudpathlib[s3,gs]>=0.21.0"]
s3 = [
    "cloudpathlib[s3]>=0.21.0",
] # Include s3 to not break backwards compatibility
pybids = ["pandas>=2.0.0"]

[dependency-groups]
dev = [
    "pandas==3.0.3",
    "pdoc>=16.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[project.urls]
"Homepage" = "https://github.com/childmindresearch/bids2table"
"Issues" = "https://github.com/childmindresearch/bids2table/issues"

[project.scripts]
bids2table = "bids2table.__main__:main"
b2t2 = "bids2table.__main__:main"

[tool.setuptools.packages.find]
include = ["bids2table*"]

[tool.setuptools_scm]
version_file = "bids2table/_version.py"

[tool.ruff]
line-length = 88
target-version = "py312"
lint.extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
markers = ["cloud: Tests requiring cloud group dependencies"]
